--- a/TVShows/TVShows/Show details/ShowDetails.storyboard
+++ b/TVShows/TVShows/Show details/ShowDetails.storyboard
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -15,14 +11,14 @@
             <objects>
                 <viewController storyboardIdentifier="ShowDetailsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="JsY-I2-wvw" customClass="ShowDetailsViewController" customModule="TVShows" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Tmb-WN-GnL">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0rY-5e-WB5">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="AHC-jf-5Z5">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="476"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="476"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="bij-w3-9AQ">
@@ -66,7 +62,7 @@
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="30" id="0df-hi-cb9"/>
                                                             </constraints>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                             <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -91,10 +87,10 @@
                                 </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShowDetailsTableCell" rowHeight="386" id="sRI-0q-Gju" userLabel="EpisodeList" customClass="ShowDetailsTableCell" customModule="TVShows" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="504" width="414" height="386"/>
+                                        <rect key="frame" x="0.0" y="504" width="600" height="386"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sRI-0q-Gju" id="yD9-VQ-xEE">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="385.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="385.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cMs-6S-ioL">
@@ -162,7 +158,7 @@
                                 </prototypes>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mBD-Vt-qaT">
-                                <rect key="frame" x="20" y="44" width="70" height="70"/>
+                                <rect key="frame" x="20" y="20" width="70" height="70"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="70" id="Jtl-UQ-9QA"/>
                                     <constraint firstAttribute="height" constant="70" id="ShS-OQ-Rzg"/>
@@ -175,7 +171,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iQr-ed-XEI">
-                                <rect key="frame" x="304" y="782" width="70" height="70"/>
+                                <rect key="frame" x="490" y="520" width="70" height="70"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="70" id="8mz-lS-E0I"/>
                                     <constraint firstAttribute="height" constant="70" id="pSv-8o-Rop"/>
@@ -203,9 +199,9 @@
                     </view>
                     <connections>
                         <outlet property="descriptionLabel" destination="OHS-M1-aTf" id="K7I-la-UuV"/>
-                        <outlet property="label" destination="uWo-xz-XAP" id="18x-re-Whu"/>
                         <outlet property="numberOfEpisodesLabel" destination="sZg-99-iwc" id="wTJ-7N-Crl"/>
                         <outlet property="tableView" destination="0rY-5e-WB5" id="gaE-Ug-CsU"/>
+                        <outlet property="titleLabel" destination="uWo-xz-XAP" id="18x-re-Whu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x2s-ZM-E5r" userLabel="First Responder" sceneMemberID="firstResponder"/>
