--- a/TVShows/TVShows/Home/Home.storyboard
+++ b/TVShows/TVShows/Home/Home.storyboard
@@ -22,25 +22,25 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="TvShowsTableCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TvShowsTableCell" rowHeight="89" id="Z2U-Ev-pSK" customClass="TvShowsTableCell" customModule="TVShows" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="89"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="TvShowsTableCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TvShowsTableCell" rowHeight="95" id="Z2U-Ev-pSK" customClass="TvShowsTableCell" customModule="TVShows" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="95"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Z2U-Ev-pSK" id="f8H-4D-5vp">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="88.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="94.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hPy-Xc-XEx">
-                                                    <rect key="frame" x="20" y="0.0" width="374" height="88.5"/>
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="94.5"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IP6-fq-FSh">
-                                                            <rect key="frame" x="0.0" y="0.0" width="120" height="88.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="100" height="94.5"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="120" id="bp9-S9-Bt8"/>
-                                                                <constraint firstAttribute="height" priority="999" constant="100" id="l1P-e1-nOR"/>
+                                                                <constraint firstAttribute="width" constant="100" id="bp9-S9-Bt8"/>
+                                                                <constraint firstAttribute="height" priority="999" constant="120" id="l1P-e1-nOR"/>
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ngh-sV-F1d">
-                                                            <rect key="frame" x="120" y="0.0" width="254" height="88.5"/>
+                                                            <rect key="frame" x="100" y="0.0" width="274" height="94.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -56,6 +56,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="imageView" destination="IP6-fq-FSh" id="8dv-UU-zSR"/>
                                             <outlet property="thumbnail" destination="IP6-fq-FSh" id="pnW-Wk-CD0"/>
                                             <outlet property="title" destination="Ngh-sV-F1d" id="0OL-yM-NdU"/>
                                         </connections>
