--- a/TVShows/AddNewEpisode.storyboard
+++ b/TVShows/AddNewEpisode.storyboard
@@ -30,15 +30,18 @@
                                                     <constraint firstAttribute="height" constant="50" id="0Tc-B7-tOI"/>
                                                 </constraints>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Upload photo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hla-8x-mjs">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g5r-pi-jXh">
                                                 <rect key="frame" x="0.0" y="70" width="374" height="100"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="100" id="fpa-2n-1Nr"/>
+                                                    <constraint firstAttribute="height" constant="100" id="K3D-3y-wMg"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" red="1" green="0.45882352939999999" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                                <state key="normal" title="Upload photo">
+                                                    <color key="titleColor" red="1" green="0.45882352939999999" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="uploadPhotoActionHandler" destination="fSv-9D-vHR" eventType="touchUpInside" id="XTA-8u-EWQ"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="weu-oB-9zq">
