--- a/TVShows/AddNewEpisode.storyboard
+++ b/TVShows/AddNewEpisode.storyboard
@@ -19,19 +19,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="5Nc-wq-QqT" userLabel="Big Stack View">
-                                <rect key="frame" x="20" y="201" width="374" height="494"/>
+                                <rect key="frame" x="20" y="176" width="374" height="544"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="center" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="XY3-Oe-Uuq" userLabel="Header Stack View">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="170"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="220"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-camera" translatesAutoresizingMaskIntoConstraints="NO" id="fJB-qy-2Et">
-                                                <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D3y-p9-Cht">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="100"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="50" id="0Tc-B7-tOI"/>
+                                                    <constraint firstAttribute="height" constant="100" id="Cd1-H6-ZGW"/>
                                                 </constraints>
-                                            </imageView>
+                                                <state key="normal" image="ic-camera"/>
+                                                <connections>
+                                                    <action selector="imagePickerButton" destination="fSv-9D-vHR" eventType="touchUpInside" id="4W9-ZP-dry"/>
+                                                </connections>
+                                            </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g5r-pi-jXh">
-                                                <rect key="frame" x="0.0" y="70" width="374" height="100"/>
+                                                <rect key="frame" x="0.0" y="120" width="374" height="100"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="100" id="K3D-3y-wMg"/>
                                                 </constraints>
@@ -45,14 +49,14 @@
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="weu-oB-9zq">
-                                        <rect key="frame" x="0.0" y="170" width="374" height="100"/>
+                                        <rect key="frame" x="0.0" y="220" width="374" height="100"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="100" id="dtB-Fz-xzs"/>
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="cTr-zE-5PC">
-                                        <rect key="frame" x="0.0" y="270" width="374" height="224"/>
+                                        <rect key="frame" x="0.0" y="320" width="374" height="224"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="BaP-gN-hjt" userLabel="Episode title SV">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="41"/>
