--- a/TVShows/AddNewEpisode.storyboard
+++ b/TVShows/AddNewEpisode.storyboard
@@ -24,16 +24,12 @@
                                     <stackView opaque="NO" contentMode="center" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="XY3-Oe-Uuq" userLabel="Header Stack View">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="220"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D3y-p9-Cht">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-camera" translatesAutoresizingMaskIntoConstraints="NO" id="Mez-tC-zhg">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="100"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="100" id="Cd1-H6-ZGW"/>
+                                                    <constraint firstAttribute="height" constant="100" id="LAb-uk-IRw"/>
                                                 </constraints>
-                                                <state key="normal" image="ic-camera"/>
-                                                <connections>
-                                                    <action selector="imagePickerButton" destination="fSv-9D-vHR" eventType="touchUpInside" id="4W9-ZP-dry"/>
-                                                </connections>
-                                            </button>
+                                            </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g5r-pi-jXh">
                                                 <rect key="frame" x="0.0" y="120" width="374" height="100"/>
                                                 <constraints>
@@ -164,12 +160,13 @@
                         <outlet property="episodeDescriptionLabel" destination="tuf-h5-Ipb" id="nhh-yg-fTZ"/>
                         <outlet property="episodeNumberLabel" destination="cWu-nN-gel" id="06s-GN-Iyp"/>
                         <outlet property="episodeTitleLabel" destination="5ge-x7-HTi" id="RJU-nD-diY"/>
+                        <outlet property="imageView" destination="Mez-tC-zhg" id="Kic-GD-Rns"/>
                         <outlet property="seasonNumberLabel" destination="xeA-be-2Dc" id="1Lt-7Z-vZK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eVC-WV-MWD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-367" y="33"/>
+            <point key="canvasLocation" x="-368.11594202898556" y="32.8125"/>
         </scene>
     </scenes>
     <resources>
