--- a/TVShows/TVShows/Comments/Comments.storyboard
+++ b/TVShows/TVShows/Comments/Comments.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w6N-Sj-YPJ">
-                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SGp-9r-FVr">
                                         <rect key="frame" x="0.0" y="-5" width="414" height="857"/>
@@ -132,14 +132,14 @@
                                 </constraints>
                             </scrollView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-placehoder-comments" translatesAutoresizingMaskIntoConstraints="NO" id="pSx-O1-cSF">
-                                <rect key="frame" x="107" y="144" width="200" height="200"/>
+                                <rect key="frame" x="107" y="188" width="200" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="Fz1-YX-xgp"/>
                                     <constraint firstAttribute="height" constant="200" id="Q3Q-Cd-2Da"/>
                                 </constraints>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Sorry, we don/t have any comments yet. Be first who will write a review." textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="bIO-Pz-CeR">
-                                <rect key="frame" x="65" y="364" width="284" height="100"/>
+                                <rect key="frame" x="65" y="408" width="284" height="100"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="zom-ur-xVV"/>
@@ -162,6 +162,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Foi-pg-0Hn"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Comments" id="HAt-zL-gP7"/>
                     <connections>
                         <outlet property="commentInput" destination="acl-nl-q74" id="zhZ-Ud-eoc"/>
                         <outlet property="imagePlaceholderComments" destination="pSx-O1-cSF" id="ByS-nH-i5A"/>
@@ -172,7 +173,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bxx-MO-RJc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-981" y="-42"/>
+            <point key="canvasLocation" x="839.13043478260875" y="-42.1875"/>
+        </scene>
+        <!--Comments-->
+        <scene sceneID="yOu-Zz-VBy">
+            <objects>
+                <navigationController title="Comments" automaticallyAdjustsScrollViewInsets="NO" id="cvb-Dp-gKD" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="OgL-il-wqb">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="b10-DK-e8W" kind="relationship" relationship="rootViewController" id="hu2-U1-VMq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dLZ-ea-si2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-71.014492753623188" y="-42.1875"/>
         </scene>
     </scenes>
     <resources>
